Fix #51  :  If data are too big, grid has a max size, allowing us to use ui-grid scrollbar, who works up and down

--- a/org.opencompare/play-app/public/stylesheets/editor.css
+++ b/org.opencompare/play-app/public/stylesheets/editor.css
@@ -10,6 +10,7 @@
 }
 
 .grid {
+    bottom: 0;
 }
 
 .buttonsCell {
